# rewind

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_anonymous.sql  20240103000000_add_facilitator_id.sql  20240104000000_add_templates.sql  20240105000000_add_board_settings.sql  20240106000000_add_hide_votes.sql
backend/src/: db.rs  error.rs  main.rs  models.rs  protocol.rs  state.rs
backend/src/routes/: admin.rs  boards.rs  mod.rs  ws.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/board/: AddTicketForm.tsx  BlurToggle.tsx  BoardHeader.tsx  Column.tsx  DraggableTicket.tsx  FacilitatorMenu.tsx  MergeUndoToast.tsx  SortControls.tsx  Ticket.tsx  TimerControl.tsx  TimerDisplay.tsx  VoteButton.tsx  VoteLimitControl.tsx
frontend/src/components/layout/: AppShell.tsx  Logo.tsx  UpdateChecker.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  serverUrl.ts  types.ts
frontend/src/pages/: Admin.tsx  Board.tsx  Home.tsx  Setup.tsx
frontend/src/store/: boardStore.ts
frontend/src/styles/: global.css
frontend/src/utils/: sort.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/src/: lib.rs  main.rs
